--- a/.github/workflows/build_deploy_vc_authn_test.yaml
+++ b/.github/workflows/build_deploy_vc_authn_test.yaml
@@ -52,7 +52,7 @@ jobs:
           CHART_VERSION: ${{ steps.chart_version.outputs.CHART_VERSION }}
           IMAGE_TAG: ${{ needs.build_image.outputs.image_version }}
         run: |
-          yq e -i '.vc-authn-oidc.image.tag' = env(IMAGE_TAG) services/vc-authn-oidc/charts/test/values.yaml
+          yq e -i '.vc-authn-oidc.image.tag = env(IMAGE_TAG)' services/vc-authn-oidc/charts/test/values.yaml
           yq e -i '.appVersion = env(APP_VERSION)' services/vc-authn-oidc/charts/test/Chart.yaml
           yq e -i '.version = env(CHART_VERSION)' services/vc-authn-oidc/charts/test/Chart.yaml
           yq e -i '.dependencies[0].version = env(CHART_VERSION)' services/vc-authn-oidc/charts/test/Chart.yaml
@@ -63,7 +63,7 @@ jobs:
           CHART_VERSION: ${{ steps.chart_version.outputs.CHART_VERSION }}
           IMAGE_TAG: ${{ needs.build_image.outputs.image_version }}
         run: |
-          yq e -i '.vc-authn-oidc.image.tag' = env(IMAGE_TAG) services/vc-authn-oidc/charts/prod/values.yaml
+          yq e -i '.vc-authn-oidc.image.tag = env(IMAGE_TAG)' services/vc-authn-oidc/charts/prod/values.yaml
           yq e -i '.appVersion = env(APP_VERSION)' services/vc-authn-oidc/charts/prod/Chart.yaml
           yq e -i '.version = env(CHART_VERSION)' services/vc-authn-oidc/charts/prod/Chart.yaml
           yq e -i '.dependencies[0].version = env(CHART_VERSION)' services/vc-authn-oidc/charts/prod/Chart.yaml
@@ -92,4 +92,3 @@ jobs:
           token: ${{ secrets.DITP_GITOPS_ARGO_SECRET}}
           action: sync
           appName: "e79518-test-vc-authn-oidc"
- 
