feat(ci): Create a PR with updated Helm chart versions and image tag
Signed-off-by: Ivan P <2119240+i5okie@users.noreply.github.com>

--- a/.github/workflows/build_deploy_vc_authn_test.yaml
+++ b/.github/workflows/build_deploy_vc_authn_test.yaml
@@ -68,27 +68,20 @@ jobs:
           yq e -i '.version = env(CHART_VERSION)' services/vc-authn-oidc/charts/prod/Chart.yaml
           yq e -i '.dependencies[0].version = env(CHART_VERSION)' services/vc-authn-oidc/charts/prod/Chart.yaml
 
-      - name: Commit and Push
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add services/vc-authn-oidc/charts/test/Chart.yaml services/vc-authn-oidc/charts/prod/Chart.yaml
-          git commit -m "Update chart and app versions, and set image tag" || echo "No changes to commit"
-          git push origin main
-
-      - name: Trigger and wait for GitOps sync workflow
-        uses: convictional/trigger-workflow-and-wait@v1.6.5
-        id: workflow-trigger
+      - name: Create PR
+        uses: peter-evans/create-pull-request@v7
         with:
-          owner: bcgov
-          repo: trust-over-ip-configurations
-          github_token: ${{ secrets.DITP_CONFIGS_REPO_TOKEN }}
-          workflow_file_name: gitops_sync.yaml
-
-      - name: Trigger ArgoCD Sync of e79518-test-vc-authn-oidc
-        uses: OpsVerseIO/argocd-sync@0.2.0
-        with:
-          address: gitops-shared.apps.silver.devops.gov.bc.ca
-          token: ${{ secrets.DITP_GITOPS_ARGO_SECRET}}
-          action: sync
-          appName: "e79518-test-vc-authn-oidc"
+          author: ${{ github.actor }} <${{ github.event.pusher.email }}>
+          committer: ${{ github.actor }} <${{ github.event.pusher.email }}>
+          signoff: true
+          commit-message: "ci: bump versions"
+          title: "[bot] Update VC-AuthN Chart and Image Tag"
+          body: |
+            This PR updates the Helm chart versions and image tags for the VC-AuthN OIDC service.
+            - Test environment updated to use image tag `${{ needs.build_image.outputs.image_version }}`
+            - Prod environment updated to use image tag `${{ needs.build_image.outputs.image_version }}`
+          base: main
+          branch: update-vc-authn-chart-${{ needs.build_image.outputs.image_version }}
+          add-paths: |
+            services/vc-authn-oidc/charts/test/
+            services/vc-authn-oidc/charts/prod/
