--- a/.github/workflows/build_deploy_vc_authn_test.yaml
+++ b/.github/workflows/build_deploy_vc_authn_test.yaml
@@ -41,6 +41,7 @@ jobs:
         with:
           app-id: ${{ vars.TEAM_CDT_GITHUB_APP_ID }}
           private-key: ${{ secrets.TEAM_CDT_GITHUB_APP_PRIVATE_KEY }}
+          owner: ${{ github.repository_owner }}
 
       - uses: actions/checkout@v4
         with:
