fix(ci): Add repositories input to GitHub App token creation step
Signed-off-by: Ivan P <2119240+i5okie@users.noreply.github.com>

--- a/.github/workflows/build_deploy_vc_authn_test.yaml
+++ b/.github/workflows/build_deploy_vc_authn_test.yaml
@@ -42,6 +42,7 @@ jobs:
           app-id: ${{ vars.TEAM_CDT_GITHUB_APP_ID }}
           private-key: ${{ secrets.TEAM_CDT_GITHUB_APP_PRIVATE_KEY }}
           owner: ${{ github.repository_owner }}
+          repositories: ${{ github.event.repository.name }}
 
       - uses: actions/checkout@v4
         with:
