New field for useConnectionBasedVerification
Signed-off-by: Lucas ONeil <lucasoneil@gmail.com>

--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -15,7 +15,8 @@ vc-authn-oidc:
     cameraRedirectUrl: wallet_howto
     presentationExpireTime: 300
     templateDirectory: /app/templates
-
+    useConnectionBasedVerification: true
+  
   useHTTPS: true
   logLevel: INFO
 
