--- a/services/vc-authn-oidc/charts/prod/values.yaml
+++ b/services/vc-authn-oidc/charts/prod/values.yaml
@@ -13,6 +13,8 @@ vc-authn-oidc:
     cameraRedirectUrl: wallet_howto
     presentationExpireTime: 300
     templateDirectory: /app/templates
+    useConnectionBasedVerification: false
+  
   useHTTPS: true
   logLevel: INFO
   auth:
