--- a/services/vc-authn-oidc/charts/test/values.yaml
+++ b/services/vc-authn-oidc/charts/test/values.yaml
@@ -16,7 +16,8 @@ vc-authn-oidc:
     cameraRedirectUrl: wallet_howto
     presentationExpireTime: 300
     templateDirectory: /app/templates
-
+    useConnectionBasedVerification: false
+  
   useHTTPS: true
   logLevel: INFO
 
