hotfix, set webhook url
Signed-off-by: Ivan P <2119240+i5okie@users.noreply.github.com>

--- a/services/vc-authn-oidc/charts/dev/values.yaml
+++ b/services/vc-authn-oidc/charts/dev/values.yaml
@@ -91,7 +91,7 @@ vc-authn-oidc:
       wallet-name: askar-wallet
       wallet-storage-type: postgres_storage
       wallet-type: askar
-      webhook-url: 'https://{{ include "vc-authn-oidc.host" . }}/webhooks'
+      webhook-url: https://vc-authn-oidc-dev.apps.silver.devops.gov.bc.ca/webhooks
     ledgers.yml:
       - id: BCovrinTest
         is_production: true
