--- a/services/vc-authn-oidc/charts/prod/values.yaml
+++ b/services/vc-authn-oidc/charts/prod/values.yaml
@@ -21,7 +21,7 @@ vc-authn-oidc:
         - pending
         - verified
     templateDirectory: /app/templates
-    useConnectionBasedVerification: false
+    useConnectionBasedVerification: true
   
   useHTTPS: true
   logLevel: INFO
