update vc-authn-oidc test values
Signed-off-by: Ivan P <2119240+i5okie@users.noreply.github.com>

--- a/services/vc-authn-oidc/charts/test/values.yaml
+++ b/services/vc-authn-oidc/charts/test/values.yaml
@@ -72,10 +72,14 @@ vc-authn-oidc:
     image:
       pullPolicy: IfNotPresent
 
-    agentUrl: "https://vc-authn-oidc-acapy-test.apps.silver.devops.gov.bc.ca"
-    adminUrl: "https://vc-authn-oidc-acapy-admin-test.apps.silver.devops.gov.bc.ca"
+    agentUrl: "https://vc-authn-oidc-agent-test.apps.silver.devops.gov.bc.ca"
+    adminUrl: "https://vc-authn-oidc-agent-admin-test.apps.silver.devops.gov.bc.ca"
 
-    existingSecret: "vc-authn-oidc-acapy-secret"
+    secrets:
+      api:
+        existingSecret: "vc-authn-oidc-agent-api"
+      seed:
+        existingSecret: "vc-authn-oidc-agent-seed"
 
     walletStorageConfig:
       url: vc-authn-oidc-agent-database-primary:5432
