--- a/services/traction/charts/dev/values.yaml
+++ b/services/traction/charts/dev/values.yaml
@@ -1,16 +1,16 @@
-traction:
+global:
   ingressSuffix: -dev.apps.silver.devops.gov.bc.ca
+traction:
   acapy:
     image:
       tag: sha-872ea96
       pullPolicy: Always
-    secret:
-      adminApiKey:
-        existingSecret: traction-acapy-api
-      pluginInnkeeper:
-        existingSecret: traction-acapy-plugin-innkeeper
-      walletKey:
-        existingSecret: traction-acapy-walletkey
+    secrets:
+      api:
+        existingSecret: 'traction-acapy-api'
+
+    extraEnvVarsSecret: 'traction-acapy-plugin-innkeeper'
+
     argfile.yml:
       preserve-exchange-records: false
       tails-server-base-url: https://tails-dev.vonx.io
@@ -74,6 +74,9 @@ traction:
           network.openshift.io/policy-group: ingress
     resources:
       limits:
+        memory: 500Mi
+    postgresql:
+      enabled: false
   tenant_proxy:
     image:
       tag: sha-872ea96
@@ -160,8 +163,7 @@ traction:
       targetMemoryUtilizationPercentage: 0
       targetCPUUtilizationPercentage: 80
       stabilizationWindowSeconds: 0
+
   ingress:
     annotations:
       route.openshift.io/termination: edge
-  postgresql:
-    enabled: false
