--- a/services/vc-authn-oidc/charts/test/Chart.yaml
+++ b/services/vc-authn-oidc/charts/test/Chart.yaml
@@ -2,9 +2,9 @@ apiVersion: v2
 name: vc-authn-oidc
 description: vc-authn-oidc - test
 type: application
-version: "0.4.1"
+version: "0.4.4"
 appVersion: "2.3.0"
 dependencies:
   - name: vc-authn-oidc
-    version: "0.4.1"
-    repository: https://openwallet-foundation.github.io/acapy-vc-authn-oidc
+    version: "0.4.4"
+    repository: https://openwallet-foundation.github.io/helm-charts/
