Updated Traction test values
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/services/traction/charts/test/values.yaml
+++ b/services/traction/charts/test/values.yaml
@@ -1,19 +1,23 @@
-traction:
+global:
   ingressSuffix: -test.apps.silver.devops.gov.bc.ca
+
+traction:
   acapy:
     image:
       pullPolicy: Always
-    secret:
-      adminApiKey:
-        existingSecret: traction-acapy-api
-      pluginInnkeeper:
-        existingSecret: traction-acapy-plugin-innkeeper
-      walletKey:
-        existingSecret: traction-acapy-walletkey
+    
+    secrets:
+      api:
+        retainOnUninstall: true
+        existingSecret: "traction-acapy-api"
+
+    extraEnvVarsSecret: "traction-acapy-plugin-innkeeper"
+
     argfile.yml:
       preserve-exchange-records: false
       tails-server-base-url: https://tails-test.vonx.io
       tails-server-upload-url: https://tails-test.vonx.io
+    
     ledgers.yml:
       - id: bcovrin-test
         is_production: true
@@ -31,6 +35,7 @@ traction:
         is_production: true
         is_write: false
         genesis_url: "https://raw.githubusercontent.com/ICCS-ISAC/dtrust-reconu/main/CANdy/prod/pool_transactions_genesis"
+    
     plugin-config.yml:
       traction_innkeeper:
         innkeeper_wallet:
@@ -48,51 +53,78 @@ traction:
           expiry_minutes: 2880
           auto_approve: false
           auto_issuer: false
+    
     walletStorageConfig:
       url: traction-database-primary:5432
+    
     walletStorageCredentials:
       admin_account: walletman
       existingSecret: traction-database-acapy
       secretKeys:
         adminPasswordKey: walletman-password
         userPasswordKey: acapy-password
-    networkPolicy:
-      enabled: true
-      ingress:
-        enabled: true
-        namespaceSelector:
-          network.openshift.io/policy-group: ingress
+    
     autoscaling:
       enabled: true
       minReplicas: 3
       maxReplicas: 5
       targetCPUUtilizationPercentage: 80
       targetMemoryUtilizationPercentage: 80
-    resources:
-      limits:
-  tenant_proxy:
-    image:
-      pullPolicy: Always
+    
     networkPolicy:
       enabled: true
       ingress:
         enabled: true
         namespaceSelector:
           network.openshift.io/policy-group: ingress
+
+    ingress:
+      agent:
+        enabled: true
+        hostname: traction-acapy-test.apps.silver.devops.gov.bc.ca
+        annotations:
+          route.openshift.io/termination: edge
+      admin:
+        enabled: true
+        hostname: traction-acapy-test-admin.apps.silver.devops.gov.bc.ca
+        annotations:
+          route.openshift.io/termination: edge
+    
+    resources:
+      limits:
+        memory: 500Mi
+      requests:
+        cpu: 250m
+        memory: 250Mi
+  
+  tenant_proxy:
+    image:
+      pullPolicy: Always
+    
+    networkPolicy:
+      enabled: true
+      ingress:
+        enabled: true
+        namespaceSelector:
+          network.openshift.io/policy-group: ingress
+    
     autoscaling:
       enabled: true
       minReplicas: 2
       maxReplicas: 5
       targetCPUUtilizationPercentage: 80
       targetMemoryUtilizationPercentage: 80
+  
   ui:
     image:
       pullPolicy: Always
+    
     ux:
       infoBanner:
         message: "Traction TEST Environment"
         messageLevel: info
         showMessage: true
+    
     showOIDCReservationLogin: true
     oidc:
       active: true
@@ -142,19 +174,29 @@ traction:
             ]
           }
         }
+    
     smtp:
       server: apps.smtp.gov.bc.ca
       port: 25
       senderAddress: DoNotReplyTractionTEST@gov.bc.ca
       innkeeperInbox: "lucas.o'neil@gov.bc.ca,emiliano.sune@quartech.com"
+    
     networkPolicy:
       enabled: true
       ingress:
         enabled: true
         namespaceSelector:
           network.openshift.io/policy-group: ingress
+
+    autoscaling:
+      enabled: true
+      minReplicas: 1
+      maxReplicas: 3
+      targetMemoryUtilizationPercentage: 0
+      targetCPUUtilizationPercentage: 80
+      stabilizationWindowSeconds: 0
+  
   ingress:
+    enabled: true
     annotations:
       route.openshift.io/termination: edge
-  postgresql:
-    enabled: false
