--- a/services/vc-authn-oidc/charts/prod/values.yaml
+++ b/services/vc-authn-oidc/charts/prod/values.yaml
@@ -1,13 +1,21 @@
-vc-authn-oidc:
+
+# Updated to match test structure, preserving prod-specific values
+global:
   ingressSuffix: .apps.silver.devops.gov.bc.ca
+  security:
+    allowInsecureImages: true
+
+vc-authn-oidc:
   image:
-    repository: ghcr.io/bcgov/acapy-vc-authn-oidc
+    registry: ghcr.io
+    repository: bcgov/acapy-vc-authn-oidc
     pullPolicy: IfNotPresent
+
   acapyTenancyMode: single
   setNonRevoked: true
   invitationLabel: BC Gov SSO Service
   useOobLocalDIDService: false
-  
+
   controller:
     cameraRedirectUrl: wallet_howto
     presentationExpireTime: 300
@@ -22,44 +30,60 @@ vc-authn-oidc:
         - verified
     templateDirectory: /app/templates
     useConnectionBasedVerification: true
-  
+
   useHTTPS: true
   logLevel: INFO
+
   auth:
     api:
       existingSecret: "vc-authn-oidc-api-key"
     token:
       privateKey:
         existingSecret: "vc-authn-oidc-jwt-token"
+
   database:
     existingSecret: "vc-authn-oidc-mongodb"
+
   resources:
     limits:
       memory: 512Mi
     requests:
       cpu: 10m
       memory: 128Mi
+
   autoscaling:
     enabled: false
     minReplicas: 3
     maxReplicas: 5
     targetCPUUtilizationPercentage: 80
+
   networkPolicy:
     enabled: true
     ingress:
       enabled: true
       namespaceSelector:
         network.openshift.io/policy-group: ingress
+
   ingress:
     enabled: true
     annotations:
       route.openshift.io/termination: edge
+
   acapy:
+    nameOverride: agent
     image:
       pullPolicy: IfNotPresent
-    existingSecret: "vc-authn-oidc-acapy-secret"
-    agentSeed:
-      existingSecret: "vc-authn-oidc-agent"
+
+    # prod URLs (update if needed)
+    agentUrl: "https://vc-authn-oidc-agent.apps.silver.devops.gov.bc.ca"
+    adminUrl: "https://vc-authn-oidc-agent-admin.apps.silver.devops.gov.bc.ca"
+
+    secrets:
+      api:
+        existingSecret: "vc-authn-oidc-agent-api"
+      seed:
+        existingSecret: "vc-authn-oidc-agent"
+
     walletStorageConfig:
       url: vc-authn-oidc-agent-database-primary:5432
     walletStorageCredentials:
@@ -68,11 +92,14 @@ vc-authn-oidc:
       secretKeys:
         adminPasswordKey: admin-password
         userPasswordKey: acapy-password
+
     autoscaling:
       enabled: true
       minReplicas: 3
       maxReplicas: 5
       targetCPUUtilizationPercentage: 80
+      stabilizationWindowSeconds: 0
+
     argfile.yml:
       admin-insecure-mode: false
       auto-accept-invites: true
@@ -83,7 +110,6 @@ vc-authn-oidc:
       auto-respond-messages: true
       auto-verify-presentation: true
       genesis-transactions-list: /tmp/ledgers.yml
-      label: '{{ include "acapy.label" .}}'
       log-level: info
       monitor-ping: true
       multitenant-admin: false
@@ -93,7 +119,8 @@ vc-authn-oidc:
       wallet-name: askar-wallet
       wallet-storage-type: postgres_storage
       wallet-type: askar
-      webhook-url: 'https://{{ include "vc-authn-oidc.host" . }}/webhooks'
+      webhook-url: https://vc-authn-oidc.apps.silver.devops.gov.bc.ca/webhooks
+
     ledgers.yml:
       - id: BCovrinTest
         is_production: true
@@ -108,7 +135,16 @@ vc-authn-oidc:
         enabled: true
         namespaceSelector:
           network.openshift.io/policy-group: ingress
+
+    postgresql:
+      enabled: false
+
   mongodb:
+    image:
+      registry: artifacts.developer.gov.bc.ca
+      repository: docker-remote/bitnamilegacy/mongodb
+      tag: 8.0.4-debian-12-r4
+      pullPolicy: IfNotPresent
     auth:
       existingSecret: "vc-authn-oidc-mongodb"
     persistence:
@@ -127,5 +163,3 @@ vc-authn-oidc:
     livenessProbe:
       enabled: true
       timeoutSeconds: 10
-  postgresql:
-    enabled: false
