replace mongodb exporter image
Signed-off-by: Ivan P <2119240+i5okie@users.noreply.github.com>

--- a/services/vc-authn-oidc/charts/prod/values.yaml
+++ b/services/vc-authn-oidc/charts/prod/values.yaml
@@ -157,6 +157,10 @@ vc-authn-oidc:
         memory: 450Mi
     metrics:
       enabled: true
+      image:
+        registry: artifacts.developer.gov.bc.ca
+        repository: docker-remote/bitnamilegacy/mongodb-exporter
+        tag: 0.43.1-debian-12-r1
     readinessProbe:
       enabled: true
       timeoutSeconds: 10
