--- a/.github/workflows/uninstall_install_sandbox.yaml
+++ b/.github/workflows/uninstall_install_sandbox.yaml
@@ -100,14 +100,14 @@ jobs:
           --set ui.ux.infoBanner.message="${BANNER_MESSAGE}" \
           traction-sandbox traction/traction
 
-      # - name: Install DID WebVH Server via Helm
-      #   run: |
-      #     helm repo add didwebvh-server-py ${{ vars.DIDWEBVH_HELM_REPO_URL }}
-      #     helm upgrade --install \
-      #     -n ${{ secrets.OPENSHIFT_NAMESPACE_SANDBOX }} --wait --timeout=7m \
-      #     -f ./services/didwebvh-server-py/sandbox/values.yaml \
-      #     --set ui.ux.infoBanner.message="${BANNER_MESSAGE}" \
-      #     didwebvh-server-py-sandbox didwebvh-server-py/didwebvh-server-py
+      - name: Upgrade DID WebVH Server via Helm
+        run: |
+          helm repo add didwebvh-server-py ${{ vars.DIDWEBVH_HELM_REPO_URL }}
+          helm upgrade --install \
+          -n ${{ secrets.OPENSHIFT_NAMESPACE_SANDBOX }} --wait --timeout=7m \
+          -f ./services/didwebvh-server-py/sandbox/values.yaml \
+          --set ui.ux.infoBanner.message="${BANNER_MESSAGE}" \
+          didwebvh-server-py-sandbox didwebvh-server-py/didwebvh-server-py
 
       - name: Rocket.Chat Notification
         uses: RocketChat/Rocket.Chat.GitHub.Action.Notification@1.1.1
